# bevy_spawnable

./: Cargo.toml
derive/: Cargo.toml
derive/src/: child.rs  field.rs  lib.rs  spawnable.rs
examples/: simple.rs
src/: lib.rs
