[package]
name = "bevy_spawnable"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["derive"]

[dependencies]
bevy_spawnable_derive = { path = "derive" }
bevy_ecs = { version = "0.5.0", default-features = false }

[dev-dependencies]
bevy = "0.5.0"
bevy_devtools = { git = "https://github.com/Bytebuddha/bevy_devtools" }
